--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "craco-alias": "^3.0.1",
+    "dompurify": "^3.0.9",
     "emoji-mart": "^5.5.2",
     "emoji-picker-react": "^4.8.0",
     "react": "^18.2.0",
