--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@craco/craco": "^7.1.0",
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.12",
     "@tanstack/react-query": "^5.24.1",
     "@tanstack/react-query-devtools": "^5.24.1",
     "@testing-library/jest-dom": "^5.17.0",
